# wispra

./: .gitignore  README.md  build.zig  build.zig.zon  setup.sh  test_full_workflow.sh  test_semantic.zig  wispra.service
.zig-cache/c/04f9e4817da7c317b867e4e4f2506d91/: options.zig
.zig-cache/c/2d405f57f9ff12952485e190d42ccaba/: options.zig
.zig-cache/o/0d96cc7fe0349bfdec66ab805c43a9e7/: cimport.h.d
.zig-cache/o/10ebc7cbd8d9be46831fec31593b1014/: cimport.h  cimport.h.d
.zig-cache/o/138c92ff0c556e7d635fd800c97fd4e6/: omawispd
.zig-cache/o/1f701a8cd3eaaa87334d15980c690bb8/: cimport.h.d
.zig-cache/o/215131a02efc00c93b739f0e5e0d7d9d/: omawisp-ptt
.zig-cache/o/22ab846714b98332f5f1eb3c0d3c1ae2/: cimport.h.d
.zig-cache/o/24219f9226718420b866f276b080e933/: omawispd
.zig-cache/o/26c9a9c8e60b6640fc23f5a617c15ad0/: cimport.zig
.zig-cache/o/2796699b54543f4573c1539856f0ff8b/: omawisp-ptt
.zig-cache/o/2d227cbf6c0557471bc6c7185b93cdc1/: omawisp-tui
.zig-cache/o/44069612e63fbeb4e65c762d2f188ae9/: gbp.bin.z
.zig-cache/o/4bf7a04ba7242575f39f0df92fe89557/: cimport.zig
.zig-cache/o/4de8e08026125d207d06e03c450c6ca2/: omawispd
.zig-cache/o/507a85d4ca124c74dfe2202f17037e30/: omawispd
.zig-cache/o/58125fc663fc8b8326ae40273d237dfc/: cimport.h.d
.zig-cache/o/5c46638dce13ac67921450e642fe75f1/: dependencies.zig
.zig-cache/o/688bd753858b013b7b1167f7813e8bb3/: cimport.h.d
.zig-cache/o/6953e6135557f03674a19ff5ff1de605/: omawispd
.zig-cache/o/6bb701be0de356951cc4d7ec92e1f10f/: omawispd
.zig-cache/o/78c746f221cd752923b1aef5a920e37b/: cimport.h.d
.zig-cache/o/8464d8ea685ddc1f092195e8c4324abf/: omawispd
.zig-cache/o/84b6a492a2e37f69ec482ddb9f96877f/: dwp.bin.z
.zig-cache/o/8f170930d8c73850feb752567de27850/: omawispd
.zig-cache/o/b8597ad1f38ef196069445b9ab611d37/: cimport.h.d
.zig-cache/o/bd86b4bfdd3772d66521e18682e9cb87/: dwp
.zig-cache/o/c037f3d3745e40a6873a004480f46d81/: dependencies.zig
.zig-cache/o/d6a85d520293bb901e9f145a309f9eff/: dependencies.zig
.zig-cache/o/d98e979d4aa2dd737a15d6f3e63ec030/: omawispd
.zig-cache/o/d9b23b7b0ad9d36bb77195568a204913/: cimport.zig
.zig-cache/o/dc30a6c5caababf1ab7b74253087fa0d/: omawispd
.zig-cache/o/de0dc1531cae9e1b24990b9b62d4a8f6/: omawispd
.zig-cache/o/f04a6a28fe1fabce58d4ee683a7f6d03/: gbp
.zig-cache/o/f0cdbb71cd142fb5342fb5dc4c39ebb5/: omawispd
.zig-cache/o/fa9d648323e1cdf9813da44cba952ca5/: cimport.h.d
.zig-cache/o/fbf42cd2b23ce5c0447af819b1987586/: omawispd
omawisp/: CMakeLists.txt  README.md
omawisp/scripts/: install.sh  omawisp.service  sample-hyprland.conf
omawisp/src/: main.cpp
omawisp/src/cli/: omawisp_cli.cpp
omawisp/src/daemon/: app.cpp  app.hpp  audio_alsa.cpp  audio_alsa.hpp  audio_pipewire.cpp  audio_pipewire.hpp  config.cpp  config.hpp  metrics.hpp  output_paste.cpp  output_paste.hpp  ring_buffer.hpp  transcriber_whisper.cpp  transcriber_whisper.hpp  vad_stub.c  vad_webrtc.cpp  vad_webrtc.hpp
src/: main.zig
src/cli/: wispra_cli.zig  wispra_history.zig
src/daemon/: app.zig  audio_portaudio.zig  config.zig  database.zig  metrics.zig  output.zig  ring_buffer.zig  semantic_correction.zig  transcriber.zig  vad_stub.zig  wav.zig
src/shared/: database.zig
src/tui/: main.zig
